results/SVCOMP/2-shot/log-bitwise1-2024_03_18_23_48_40.txt
public class bitwise1 {
    static char c;

    //@ requires input >= 0;
    //@ ensures c == (char) (input * 2 + 1);
    //@ ensures \result == ((c | 2) & 3) == 3;
    public static boolean fun(int input) {
        c = (char) (input * 2 + 1);
        int i = (c | 2);
        return (i & 3) == 3;
    }
}
/home/max/Documents/JMLGPT/tmp/bitwise1.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures c == (char) (input * 2 + 1);
                ^
/home/max/Documents/JMLGPT/tmp/bitwise1.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result == ((c | 2) & 3) == 3;
                             ^
/home/max/Documents/JMLGPT/tmp/bitwise1.java:6: error: incomparable types: boolean and int
    //@ ensures \result == ((c | 2) & 3) == 3;
                        ^
/home/max/Documents/JMLGPT/tmp/bitwise1.java:6: error: incomparable types: boolean and int
    //@ ensures \result == ((c | 2) & 3) == 3;
                                         ^
4 errors

